# Cache

./: .gitignore  CMakeLists.txt  Makefile  README.md  lfu.cpp  main  main.cpp  pca.cpp
cache/: lfu_cache.h  log.h  pca_cache.h
graph/: graph.cpp  graph.h  graph_maker.py  lfu_hits_array.txt  pca_hits_array.txt
inc/: cache.h  caches.h  lfu_cache.h  log.h  pca_cache.h
logs/: lfu_log.txt  pca_log.txt
test/: test.cpp  test.txt  test_gen.py
test/unit_tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
